--- a/style.css
+++ b/style.css
@@ -260,6 +260,7 @@ nav a.active{
     justify-content: center;
     align-items: center;
     gap: 20px;
+    transition: 0.3s ease;
 }
 
 .proj:hover{
