--- a/style.css
+++ b/style.css
@@ -261,6 +261,31 @@ nav a.active{
     align-items: center;
     gap: 20px;
     transition: 0.3s ease;
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.tooltip-text {
+  visibility: hidden;
+  width: 160px;
+  background-color: #00ccff;
+  color: white;
+  text-align: center;
+  padding: 8px;
+  border-radius: 6px;
+  position: absolute;
+  bottom: 125%; /* Position above */
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  z-index: 10;
+}
+
+.proj:hover .tooltip-text {
+  visibility: visible;
+  opacity: 1;
 }
 
 .proj:hover{
