--- a/style.css
+++ b/style.css
@@ -249,8 +249,7 @@ nav a.active{
     justify-content: center;
     align-content: center;
 }
-
-.proj{
+.proj {
     display: flex;
     flex-direction: column;
     border: 3px solid #00ccff;
@@ -262,29 +261,29 @@ nav a.active{
     gap: 20px;
     transition: 0.3s ease;
     position: relative;
-    display: inline-block;
     cursor: pointer;
-}
+  }
 
-.tooltip-text {
-  visibility: hidden;
-  background-color: #00ccff;
-  color: white;
-  text-align: center;
-  padding: 8px;
-  border-radius: 6px;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  opacity: 0;
-  transition: opacity 0.3s ease-in-out;
-  z-index: 10;
-}
+  .tooltip-text {
+    visibility: hidden;
+    background-color: #00ccff;
+    color: white;
+    text-align: center;
+    padding: 8px;
+    border-radius: 6px;
+    position: absolute;
+    top: -40px;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    z-index: 10;
+  }
 
-.proj:hover .tooltip-text {
-  visibility: visible;
-  opacity: 1;
-}
+  .proj:hover .tooltip-text {
+    visibility: visible;
+    opacity: 1;
+  }
 
 .proj:hover{
     background-color: #ffffff;
